this code has bugs but i made it responsive on mobile

--- a/Etch-a-Sketch/CSS/styles.css
+++ b/Etch-a-Sketch/CSS/styles.css
@@ -11,6 +11,7 @@ header {
     font-weight: bold;
 }
 
+
 .active {
     background-color: purple;
 }
@@ -33,6 +34,7 @@ header {
     background-color: white;
     height: 100%;
 }
+
 
 .border {
     border: 1px solid black;
@@ -116,3 +118,40 @@ button {
 .grid-mode {
     width: 50%;
 }
+
+@media (max-width: 992px){
+    body {
+        position: relative;
+    }
+    body .header {
+        position: relative;
+        margin-bottom: 250px;
+    }
+
+    body header {
+        font-size: 50px;
+    }
+
+    body .container {
+        background-color: white;
+        width: 400px;
+        height: 400px;
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(16,1fr);
+        grid-template-rows: repeat(16,1fr);
+        margin-bottom: 150px;
+    }
+    body .settings {
+        position: relative;
+        width: 300px;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1000px) {
+    body .settings {
+        width: 300px;
+        margin: auto;
+    }
+}
+
